# Nirma

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.py
env/: Dockerfile
src/base/: base_task.py  pipeline_constructor.py
src/pipelines/: audio_to_emotions_pipeline.py  audio_to_valence_dominance_pipeline.py  pipeline.py  test_pipeline.py
src/pipelines/pipeline_cofigs/: audio_to_emotion_pipeline.yaml  audio_to_valence_dominance.yaml  test_pipeline.yaml
src/services/telegram_bot/: bot.py  service_requirements.txt
src/tasks/: __init__.py
src/tasks/audio_emotions_task/: __init__.py  audio_to_emotion.py  audio_to_valence_dominance.py
src/tasks/audio_emotions_task/modules/: emotion_model.py  valence_dominance_model.py
src/tasks/audio_emotions_task/task_configs/: audio_to_emotion.yaml  valence_dominance.yaml
src/tasks/diarize/: __init__.py  diarize_task.py
src/tasks/diarize/task_config/: pyannote_diarize.yaml
src/tasks/llm_task/: audio_to_emotion.py
src/tasks/llm_task/modules/: valence_dominance_model.py
src/tasks/recognize/: __init__.py  recognize_task.py
src/tasks/recognize/task_config/: whisper_base_recognize.yaml  whisper_medium_recognize.yaml  whisper_tiny_recognize.yaml
src/tasks/recognize_n_diar/: recognize_task.py
src/tasks/recognize_n_diar/task_config/: base.yaml  medium.yaml  tiny.yaml  whisper_tiny_recognize.yaml
src/tasks/test_task/: dummy_task.py
src/tasks/test_task/task_config/: dummy_task.yaml
