[tool.poetry]
name = "NirmaEmo"
version = "1.0.0"
description = ""
authors = ["itmo"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
pyyaml = "^6.0.1"
transformers = "^4.33.0"
whisperx = {git = "https://github.com/m-bain/whisperx.git"}
librosa = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pipeline = 'src.pipelines.pipeline:main'
